Fix race condition on loading custom app icon.

Custom app icon loading is started immidiatelly when it is assigned,
including the case when it is set as a create parameter for Chrome app
window. In last case icon gets loaded in together with main page content
loaded. Here is the race. If page is loaded first it commits navigation
which abort all pending resource load requests, including the custom
icon. As result custom icon is not loaded. Solution is to start custom
icon loading only when app window is ready.

Test: Manually
Bug: 788531
Change-Id: If72a094a846b87f45bfe60bfbbcb7889281579c5
Reviewed-on: https://chromium-review.googlesource.com/895200
Commit-Queue: Yury Khmel <khmel@google.com>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#533958}
Former-commit-id: 65af1ea1670045ddbcad0909d2b0798155bfdc3a