chrome/test/data/extensions/platform_apps/app_icon/test.js
@@ -8,18 +8,20 @@ var shelfWindow;
 
 function processNextCommand() {
   chrome.test.sendMessage('ready', function(response) {
-    if (response == 'Exit') {
+    if (response == 'exit') {
       return;
     }
     if (response == 'createPanelWindow') {
       chrome.app.window.create('main.html', { type: 'panel' }, function (win) {
          panelWindow = win;
+         // To avoid race condition get next command only after the window is
+         // actually created.
+         processNextCommand();
       });
-    }
-    if (response == 'setPanelWindowIcon') {
+    } else if (response == 'setPanelWindowIcon') {
       panelWindow.setIcon('icon64.png')
-    }
-    if (response == 'createNonShelfWindow') {
+      processNextCommand();
+    } else if (response == 'createNonShelfWindow') {
       // Create the shell window; it should use the app icon, and not affect
       // the panel icon.
       chrome.app.window.create(
@@ -27,23 +29,36 @@ function processNextCommand() {
                        type: 'shell' },
         function (win) {
             nonShelfWindow = win;
+            processNextCommand();
         });
-    }
-    if (response == 'createShelfWindow') {
-      // Create the shell window which is shown in shelf; it should use
-      // another custom app icon.
+    } else if (response == 'createShelfWindow') {
+      // Create the shell window which is shown in shelf; it should use the
+      // default custom app icon.
       chrome.app.window.create(
         'main.html', { id: 'win_with_icon',
                        type: 'shell',
                        showInShelf: true },
         function (win) {
           shelfWindow = win;
+          processNextCommand();
         });
-    }
-    if (response == 'setShelfWindowIcon') {
+    } else if (response == 'setShelfWindowIcon') {
       shelfWindow.setIcon('icon32.png')
+      processNextCommand();
+    } else if (response == 'createShelfWindowWithCustomIcon') {
+      // Create the shell window which is shown in shelf; it should use
+      // another custom app icon.
+      chrome.app.window.create(
+        'main.html', { id: 'win_with_custom_icon',
+                       type: 'shell',
+                       icon: 'icon32.png',
+                       showInShelf: true },
+        function (win) {
+          processNextCommand();
+       });
+    } else {
+      console.error('Unrecognized command: ' + response);
     }
-    processNextCommand();
   });
 };
 
